removendo text-stroke - bug collapse no safari

--- a/source/assets/stylesheets/locastyle/base/_fonts.sass
+++ b/source/assets/stylesheets/locastyle/base/_fonts.sass
@@ -17,10 +17,10 @@ html, body
 	-ms-font-smoothing: antialiased
 	font-smoothing: antialiased
 	+text-shadow(0 0 1px rgba(0, 0, 0, 0.01))
-	-webkit-text-stroke: 1px transparent
-	-moz-text-stroke: 1px transparent
-	-ms-text-stroke: 1px transparent
-	text-stroke: 1px transparent
+	// -webkit-text-stroke: 1px transparent
+	// -moz-text-stroke: 1px transparent
+	// -ms-text-stroke: 1px transparent
+	// text-stroke: 1px transparent
 
 
 +font-face( "#{$font-light}", font-files("opensans/opensans-light-webfont.woff", "opensans/opensans-light-webfont.ttf", "opensans/opensans-light-webfont.svg#open_sansextrabold"), "opensans/opensans-light-webfont.eot", normal, normal)
